--- a/RIS_kviz.html
+++ b/RIS_kviz.html
@@ -216,7 +216,10 @@ question:"Razlika med posrednikom sporočil in vrsto:",
 options:[
 "Zna pretvarjati med formati",
 "Ne zagotavlja asinhrone komunikacije",
-"Ima podporo za zanesljivo dostavo"
+"Ima podporo za zanesljivo dostavo",
+"Obdela, poenostavi in stisne sporočila",
+"Zagotavlja SOA",
+"Ima podporo za brskalnike"
 ],
 answer:[0,2]
 },
