--- a/RIS_kviz.html
+++ b/RIS_kviz.html
@@ -53,6 +53,17 @@ small { color:#cbd5e1; }
 <script>
 const questions = [
 
+  function shuffleInPlace(arr) {
+  for (let i = arr.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+  }
+}
+
+// random vrstni red vprašanj ob vsakem zagonu
+shuffleInPlace(questions);
+
+
 /* =========================
 BOOLEAN (1–24)
 ========================= */
@@ -515,9 +526,11 @@ function showResult(){
 
 function restartQuiz(){
   current = 0;
+  shuffleInPlace(questions);
   userAnswers = new Array(questions.length).fill(null);
   render();
 }
+
 
 function goBackToQuestions(){
   current = 0;
