--- a/RIS_kviz.html
+++ b/RIS_kviz.html
@@ -72,7 +72,7 @@ BOOLEAN (1–24)
 {type:"boolean",question:"Vrednost atributa XML elementa mora biti zapisana v narekovajih.",answer:true},
 {type:"boolean",question:"Uporaba kategorije elementa ANY v DTD določa odprti del dokumenta, nad katerim nimamo nadzora.",answer:true},
 {type:"boolean",question:"XML spada v skupino označevalnih jezikov SGML.",answer:true},
-{type:"boolean",question:"V XML dokumentih je privzeto definirana in rezervirana oznaka imenskega prostora xmlns.",answer:true},
+{type:"boolean",question:"V XML dokumentih je privzeto definirana in rezervirana oznaka imenskega prostora xml.",answer:true},
 {type:"boolean",question:"XPath je sintaksa za definiranje delov XML dokumenta.",answer:true},
 {type:"boolean",question:"Nekatere možnosti DTD besednjakov predstavljajo varnostno tveganje.",answer:true},
 {type:"boolean",question:"Ime vsakega sestavljenega tipa v XML besednjaku po dogovoru končamo z besedo 'Type'.",answer:true},
