--- a/RIS_kviz.html
+++ b/RIS_kviz.html
@@ -82,7 +82,7 @@ BOOLEAN (1–24)
 {type:"boolean",question:"Ovit (Enveloped) XML elektronski podpis je povezan s podatki, ki jih podpisuje.",answer:true},
 {type:"boolean",question:"Pri uporabi REST storitev lahko dostopamo neposredno do informacijskega vira.",answer:true},
 {type:"boolean",question:"Ime XML besednjaka mora biti enako imenu imenskega prostora.",answer:false},
-{type:"boolean",question:"SOAP pomeni RESTful Transfer.",answer:false},
+{type:"boolean",question:"REST pomeni RESTful Transfer.",answer:false},
 {type:"boolean",question:"Pri uporabi Web API podatke praviloma prenašamo z uporabo ovojnice SOAP.",answer:false},
 {type:"boolean",question:"Za zapise s stalno dolžino je značilno, da je dolžina vsake vrstice lahko enaka.",answer:true},
 {type:"boolean",question:"Imenski prostor XML elementa mora biti URI.",answer:true},
