--- a/RIS_kviz.html
+++ b/RIS_kviz.html
@@ -121,12 +121,12 @@ answer:[0,1]
 type:"multi",
 question:"Označite pravilno zapisane DTD definicije:",
 options:[
-"<!ELEMENT knjiga (naslov, avtor)*>",
-"<!ELEMENT knjiga (naslov,avtor)>",
-"<!ELEMENT knjiga (naslov|avtor|id)>",
-"<!ELEMENT knjiga [naslov,avtor]>",
-"<!ELEMENT knjiga (naslov,avtor|id)>",
-"<!ELEMENT knjiga (naslov,avtor)*>"
+"!ELEMENT knjiga (naslov, avtor)*",
+"!ELEMENT knjiga (naslov,avtor)",
+"!ELEMENT knjiga (naslov|avtor|id)",
+"!ELEMENT knjiga [naslov,avtor]",
+"!ELEMENT knjiga (naslov,avtor|id)",
+"!ELEMENT knjiga (naslov,avtor)*"
 ],
 answer:[1,2]
 },
